# RemoteRelayControlStation

./: BOM_Board1_PCB1_2022-12-14.xlsx
RemoteSwitch/: CMakeLists.txt
RemoteSwitch/espfs/: config.html  config.js  index.html
RemoteSwitch/main/: CMakeLists.txt  Config.c  Config.h  cam.c  cam.h  main.c  main.h  mqtt.c  my_network.c  my_network.h  relay.c  relay.h  task_stepper.c  task_stepper.h  webclient.c  webclient.h  webserver.c  webserver.h
